Fix image overlaping
I fix the issue by adding margin auto to my header div and also to body
container, that prevent the image to overflow outside of my body and
header

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   font-family: "Roboto", sans-serif;
   display: flex;
   flex-direction: column;
-  margin: 0;
+  margin: auto;
 }
 
 /*.container {
@@ -17,6 +17,7 @@ body {
   padding: 10px 200px 100px;
   background-color: #1f2937;
   gap: 50px;
+  margin: auto;
 }
 
 .top-header {
